MODON MRE BPDEV/force-app/main/default/objects/Refund__c/Refund__c.object-meta.xml
<CustomObject>
    <label>Refund</label>
    <nameField>
        <displayFormat>Refund-{00000}</displayFormat>
        <label>Refund No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Refunds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>