MODON MRE BPDEV/force-app/main/default/objects/Refund__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <label>Payment</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Expression_of_Interest__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>$Source.Expression_of_Interest__c</field>
            <operation>equals</operation>
            <valueField>Receipt__c.ExpressionOfInterest__c</valueField>
        </filterItems>
        <filterItems>
            <field>Receipt__c.Status__c</field>
            <operation>equals</operation>
            <value>Cleared</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Receipt__c</referenceTo>
    <relationshipLabel>Refunds</relationshipLabel>
    <relationshipName>Refunds</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>