MODON MRE BPDEV/force-app/main/default/objects/Refund__c/fields/Refund_Reason__c.field-meta.xml
<CustomField>
    <fullName>Refund_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Refund Reason</label>
    <type>TextArea</type>
</CustomField>