MODON MRE BPDEV/force-app/main/default/objects/Refund__c/fields/Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Transaction Date</label>
    <type>DateTime</type>
</CustomField>