MODON MRE BPDEV/force-app/main/default/objects/Refund__c/fields/Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Transaction Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>