MODON MRE BPDEV/force-app/main/default/objects/Refund__c/validationRules/Refund_Greater_Than_Remaining_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Refund_Greater_Than_Remaining_Amount</fullName>
    <active>true</active>
    <errorConditionFormula>Refund_Amount__c &gt; IF(Payment__r.Applied_Amount_In_Receipt_Currency_New__c &gt; 0,( Payment__r.TotalAmount__c -  Payment__r.Applied_Amount_In_Receipt_Currency_New__c ), ( Payment__r.TotalAmount__c -  Payment__r.AppliedAmount__c ) )</errorConditionFormula>
    <errorMessage>Refund amount is greater than payment&apos;s remaining amount.</errorMessage>
</ValidationRule>