MODON MRE BPDEV/force-app/main/default/objects/Refund__c/validationRules/Refund_Payment_Currency_Should_Be_Same.validationRule-meta.xml
<ValidationRule>
    <fullName>Refund_Payment_Currency_Should_Be_Same</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(CurrencyIsoCode)  &lt;&gt;  TEXT(Payment__r.CurrencyIsoCode)</errorConditionFormula>
    <errorMessage>Refund currency should be same as Payment currency.</errorMessage>
</ValidationRule>