MODON MRE BPDEV/force-app/main/default/objects/Refund__c/validationRules/Refund_Payment_Has_Zero_Remaining_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Refund_Payment_Has_Zero_Remaining_Amount</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISNEW(),
  Payment__r.RemainingAmount__c &lt;= 0
)</errorConditionFormula>
    <errorMessage>Selected payment&apos;s remaining amount is not sufficient. Select another payment.</errorMessage>
</ValidationRule>