MODON MRE BPDEV/force-app/main/default/objects/Refund__c/validationRules/Refund_Prevent_Edit_After_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Refund_Prevent_Edit_After_Approval</fullName>
    <active>true</active>
    <description>This validation rule restrics Refund edit after Approved by Operations for users don&apos;t have custom permission Egypt_Refund_Edit_Access.</description>
    <errorConditionFormula>AND(
  ISPICKVAL( Approval_Status__c , &apos;Approved by Operations&apos; ), 
  NOT( $Permission.Egypt_Refund_Edit_Access )
)</errorConditionFormula>
    <errorMessage>You are not allowed to edit Approved by Operations Refunds.</errorMessage>
</ValidationRule>