MODON MRE BPDEV/force-app/main/default/objects/Refund__c/validationRules/Refund_Prevent_Editing_Cancelled.validationRule-meta.xml
<ValidationRule>
    <fullName>Refund_Prevent_Editing_Cancelled</fullName>
    <active>true</active>
    <description>Prevenets editing on Cancelled refund record.</description>
    <errorConditionFormula>OR(
 AND(
  ISCHANGED( Refund_Status__c )  ,
  ISPICKVAL( PRIORVALUE( Refund_Status__c ) , &apos;Cancelled&apos;)
 ),
 AND(
  NOT( ISCHANGED( Refund_Status__c ) ),
  ISPICKVAL( Refund_Status__c , &apos;Cancelled&apos;)
 )
)</errorConditionFormula>
    <errorMessage>&apos;Cancelled&apos; refund can&apos;t be edited.</errorMessage>
</ValidationRule>