MODON MRE BPDEV/force-app/main/default/objects/Refund__c/validationRules/Refund_Prevent_Status_Before_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Refund_Prevent_Status_Before_Approval</fullName>
    <active>true</active>
    <description>This validation rule prevents status to get changed before Approved by Operations. only &apos;In Progress&apos; and &apos;Cancelled&apos; status are allowed before Approved by Operation.</description>
    <errorConditionFormula>AND(
  NOT (ISPICKVAL(  Approval_Status__c , &apos;Approved by Operations&apos;)),
  NOT( ISPICKVAL( Refund_Status__c , &apos;In Progress&apos;) ),
  NOT( ISPICKVAL( Refund_Status__c , &apos;Cancelled&apos;) )
)</errorConditionFormula>
    <errorMessage>Refund Status can only be &apos;In Progress&apos; or &apos;Cancelled&apos; until Approved by Operations.</errorMessage>
</ValidationRule>